Fix Java level issues